# ChangeLog for net-firewall/pglinux
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/pglinux/ChangeLog,v 1.3 2012/05/19 21:14:45 hasufell Exp $

*pglinux-2.1.3_p20120519 (19 May 2012)

  19 May 2012; Julian Ospald <hasufell@gentoo.org>
  -pglinux-2.1.3_p20120503.ebuild, +pglinux-2.1.3_p20120519.ebuild:
  version bump fixes broken dbus, remove old

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> pglinux-2.1.3_p20120503.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*pglinux-2.1.3_p20120503 (03 May 2012)

  03 May 2012; Julian Ospald <hasufell@gentoo.org>
  +pglinux-2.1.3_p20120503.ebuild, +metadata.xml:
  initial commit wrt #93982
