@@ -2,17 +2,17 @@
 Hash: SHA1
 
 DIST pglinux-2.1.3_p20120519.tar.xz 407828 RMD160 42524167e58245e615049434cefcd9bf58a7e640 SHA1 baf29ba52fd148531798125007bd151207e57670 SHA256 9d868682fcc482e6dc728806082de7668ab6dab24deab0322766b56f7f42a99e
-EBUILD pglinux-2.1.3_p20120519.ebuild 1706 RMD160 19aaff9dcb5f487b2ddc3772402a099b149bc123 SHA1 2f5199fd4032848b6ced1aa31c0d01015332d12e SHA256 6eda2c22861ee76763705ecf6ae0d1c0a626dff6da8a3e4965dd7d51462ede68
-MISC ChangeLog 714 RMD160 21606e9b73ddf5bd42ef65c4bf47b93105633a5b SHA1 b951a4c9823db4e237036d21ec56aaa0ae7b08d7 SHA256 b89a43e4ddec4517e0c9612535e3af94643bc38f88c0299c158fb5e306f9ad19
+EBUILD pglinux-2.1.3_p20120519.ebuild 2020 RMD160 024965c893553b84f1daaa92e3c4e1cef67244e8 SHA1 e11cc6b05ba2eb3d80c6573dff1c52c578776725 SHA256 64149499344de8ae3706255809414fa6037995c82504370815486f7c4d630746
+MISC ChangeLog 815 RMD160 6588025332f490458590c517fee92e5e2a948514 SHA1 e88a048bfbac30b672f23edab5e45a74592488bc SHA256 9ebac6a5566db01a24332bdfb060bbac8b9909f00aa695b8acbab85094178919
 MISC metadata.xml 915 RMD160 4a07fe3d6570c2fc6c4e87b3c5eaf831c1793494 SHA1 d00dfaad1ad3a5909b62cb0ef8081dee418c3369 SHA256 0ef1b7936761cd46bb7ee814cf32008f027e70dde530864381406ab53622c038
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPuAzDAAoJEFpvPKfnPDWzY5EH/1H09zC8Q7rDJjUmakgXgTBM
-H2DKgqjYh0yXXyElu0bo7Ij8LZ/XflRcDJXcNaSutNfIx0dS7mlbFrYS4Gn1uXHM
-rIbBnrCfFkShtGtM5zGY75vBcHEQuMY8peLj9yb1nGexQSdpWf2PfhQTT2O1IwWk
-XSi3X/y7AXvljdGYMLhGqtCbc8BqcmwucBBx1M9nvDYFbQcD9SDAujsx1DnGVz4B
-4X+yNrH2R62t1DSUWFX/ZF5w+qFWo5dOVPDTemW9lHYtv4tmgu0uXCByZRXPIeqn
-DSbazhS22fuW9mCOFiOCTRo5vstq3ouLKEBmnQeBPFF2Mfg/+ftJh+NM6CO1IZ4=
-=Y2XB
+iQEcBAEBAgAGBQJPulphAAoJEFpvPKfnPDWzhJkH/irpkgo70a1nBLNqNZ9Bf7Oq
+E5dfpQLWI7s3tfJRmHBZYdImYyLad9mvAMKShivmdgdN8Z1bBSCdItDjYzym/BZF
+3US/eVtFaTHX84zGE1IehcWF0AriHbruXqWvT9Mp0eLvrMezw2L9VmDt22j3oxYQ
+NklLePxxDBWJD1vmq9esGYnNS/diU9GDbJS1+7hlHjfekTafgxAFTXsdPHACudL1
+9lolfBzciObjriV5Fetz8GnUhIYtsH9Sni5BIPOJIMtMbDotk9vrERUTyzfDMHEl
+7k7z9OckU06n9Y9k8OeElaNcMoNMmRxiGRGDMpB98B0BCGyvyvpmZp32t+UKx0U=
+=3Nlk
 -----END PGP SIGNATURE-----
